show ans on page

--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
 
 			<button type="submit">Search</button>
 		</form>
-		
-		<div id="answer">
-		</div>
 	</section>
 
 	<section>
 		<h2>Upload xlsx</h2>
 		<input type="file" id="input_dom_element">
+	</section>
+	<section id="answer">
 	</section>
 
 	<!-- script always before closing body tag -->
